fixed cart opacity and z-index issues

--- a/client/src/components/cart/style.css
+++ b/client/src/components/cart/style.css
@@ -5,11 +5,13 @@
     min-width: 20%;
     max-width: 30%;
     max-height: 60%;
-    background-color: var(--light);
+    background-color: white;
     overflow: auto;
     padding: .5rem;
     box-shadow: 0 0 1rem rgba(0, 0, 0, .5);
     border-bottom-left-radius: .5rem;
+    z-index: 9999;
+    opacity: 1;
 }
 
 .cart h2 {
@@ -66,6 +68,7 @@
         max-height: auto;
         box-shadow: none;
         background-color: inherit;
+        z-index: 9999;
     }
 
     .cart-closed {
